deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend-deployment
spec:
  selector:
    matchLabels:
      app: krakend
  replicas: 2
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
        - name: krakend
          image: devopsfaith/krakend:2.0.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          command: [ "/usr/bin/krakend" ]
          args: [ "run", "-d", "-c", "/configuration/krakend.json", "-p", "8080" ]
          volumeMounts:
            - mountPath: /configuration
              name: remote-definitions
      volumes:
        - name: remote-definitions
          emptyDir: {}
